style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Work Sans', sans-serif;
}

/* ==== header section css ==== */
.header-section {
    height: 100vh;
    background-image: url('./images/banner/banner3.png');
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    justify-content: end;
    align-items: center
}

.header-container {
    margin-right: 15%;
}

.header-text {
    color: #FFFFFF;
    font-size: 65px;
    font-weight: 700;
    line-height: 76px;
    margin-bottom: 25px;

}

.header-details {
    font-size: 16px;
    line-height: 26px;
    color: #FFFFFF;
    margin-bottom: 30px;

}

.btn-contact-us {
    color: #005FAC;
    font-weight: 600;
    font-size: 20px;
    line-height: 23px;
    padding: 20px 25px;
    border: none;
    border-radius: 5px;

}

/* ==== previous failure section css ==== */
.previous-failure-section {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-top: 130px;

}

.failure-section-heading {
    font-weight: 700;
    font-size: 40px;
    line-height: 47px;
    color: #151414;
    margin-bottom: 25px;
}

.failure-section-details {
    font-size: 16px;
    line-height: 26px;
    color: #444343;
    margin-bottom: 20px;

}

.failure-list {
    font-size: 16px;
    line-height: 26px;
    color: #444343;
    margin-bottom: 16px;

}

.failure-list>li {
    font-size: 16px;
    line-height: 26px;
    color: #444343;
    margin-left: 20px;
}

/* ==== my plans section css ==== */

.plans-section-title {
    margin-top: 130px;
    margin-bottom: 50px;
    font-weight: 700;
    font-size: 40px;
    text-align: center;
    line-height: 47px;
    color: #151414;
}

.my-plans-container {
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    margin-bottom: 130px;
}


.plan-item-title {
    font-weight: 700;
    font-size: 30px;
    line-height: 35px;
    color: #151414;
    margin-bottom: 16px;
}

.plan-commitment {
    font-weight: 500;
    font-size: 25px;
    line-height: 29px;
    color: #737272;

}

.positive-mindset-section {
    display: flex;
    justify-content: center;
    align-items: center;
}

.positive-mindset {
    width: 1140px;
    background-image: url('./images/gradient1.png'), url('./images/watch.png');
    background-repeat: no-repeat;
    background-blend-mode: unset;
    background-position: center;
    padding: 60px 64px;
    margin-bottom: 130px;
}

.positive-mindset>h2 {
    font-weight: 700;
    font-size: 40px;
    line-height: 47px;
    color: #FFFFFF;
    margin-bottom: 24px;
}

.positive-mindset>button {
    padding: 20px 36px;
    border: none;
    border-radius: 5px;
    font-weight: 600;
    font-size: 20px;
    line-height: 23px;
    text-align: center;
    color: #005FAC;
}

/* ==== footer section css ==== */
.footer-section {
    display: flex;
    justify-content: space-around;
    background-color: #151414;
    color: #FFFFFF;
    padding: 130px 0;
}

.social-media-link img {
    padding-right: 16px;
    margin-top: 32px;
}

.footer-section h2 {
    font-weight: 700;
    font-size: 45px;
    line-height: 53px;
    color: #F8F8F8;
    margin-bottom: 16px;

}

.footer-section h3 {
    font-weight: 600;
    font-size: 25px;
    line-height: 29px;
    color: #FFFFFF;
    margin-bottom: 16px;
}

.footer-section p {
    font-size: 16px;
    line-height: 26px;
    color: #FFFFFF;
    margin-bottom: 16px;
}

.footer-section .email-field {
    height: 64px;
    width: 325px;
    border: none;
    border-radius: 5px;
    font-size: 18px;
    line-height: 21px;
    color: #F3F3F3;
    padding: 20px;
}

.subscribe-btn {
    background-color: #005FAC;
    padding: 20px 36px;
    font-weight: 600;
    font-size: 20px;
    line-height: 24px;
    color: #FFFFFF;
    border-radius: 10px;
    margin-top: 16px;
}

